--- a/wildbeast/index.html
+++ b/wildbeast/index.html
@@ -96,7 +96,7 @@
       </aside>
       
       <footer class="footer">
-        <p>Origamid © 2012 - 2017. Alguns direitos reservados.</p>
+        <p>joaodosantosc.dev © 2021. Alguns direitos reservados.</p>
       </footer>
       
     </div>
